// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Projects renders correctly with a single item 1`] = `
.c0 {
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c10 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
}

.c12 {
  color: #3b82f6;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c12:hover {
  color: #3b82f6;
}

.c12:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c8 {
  color: #a0a0b0;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 3rem;
  max-width: 600px;
}

.c5 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.5rem;
}

.c6 {
  display: flex;
  flex-direction: column;
  padding: 2rem;
  border: 1px solid #a0a0b0;
  border-radius: 10px;
  transition: border-color 0.2s ease;
}

.c6:hover {
  border-color: #3b82f6;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  color: #ffffff;
  margin: 0 0 0.75rem;
}

.c9 {
  margin-bottom: 1.5rem;
  flex: 1;
}

.c11 {
  font-size: 0.75rem;
  padding: 0.25rem 0.625rem;
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
}

.c13 {
  font-size: 0.875rem;
  font-weight: 700;
  align-self: flex-start;
}

.c13:hover {
  text-decoration: underline;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c5 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1536px) {
  .c5 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="projects"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
        variant="regular"
      >
        Projects
      </p>
      <h2
        class="c4"
      >
        What I've built
      </h2>
      <div
        class="c5"
      >
        <article
          class="c6"
        >
          <h3
            class="c7"
          >
            Petite Revery
          </h3>
          <p
            class="c8 c9"
            variant="small"
          >
            High-end fashion ecommerce built on Next.js and Shopify Storefront API. Custom product configurator, size guides, and a fully bespoke checkout experience.
          </p>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Next.js
            </span>
            <span
              class="c11"
            >
              TypeScript
            </span>
            <span
              class="c11"
            >
              Shopify
            </span>
            <span
              class="c11"
            >
              styled-components
            </span>
          </div>
          <a
            aria-label="View project: Petite Revery"
            class="c12 c13"
            href="https://petiterevery.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c6"
        >
          <h3
            class="c7"
          >
            7mesh Industries
          </h3>
          <p
            class="c8 c9"
            variant="small"
          >
            Performance cycling apparel brand. Headless Shopify storefront with custom collection filtering, Algolia search, and Storybook component library.
          </p>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Next.js
            </span>
            <span
              class="c11"
            >
              TypeScript
            </span>
            <span
              class="c11"
            >
              Shopify
            </span>
            <span
              class="c11"
            >
              Algolia
            </span>
            <span
              class="c11"
            >
              Storybook
            </span>
          </div>
          <a
            aria-label="View project: 7mesh Industries"
            class="c12 c13"
            href="https://7mesh.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
      </div>
    </section>
  </section>
</div>
`;

exports[`Projects renders correctly with full project list 1`] = `
.c0 {
  margin-top: 3rem;
  margin-bottom: 3rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c10 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
}

.c12 {
  color: #3b82f6;
  text-decoration: none;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c12:hover {
  color: #3b82f6;
}

.c12:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c8 {
  color: #a0a0b0;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 3rem;
  max-width: 600px;
}

.c5 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1.5rem;
}

.c6 {
  display: flex;
  flex-direction: column;
  padding: 2rem;
  border: 1px solid #a0a0b0;
  border-radius: 10px;
  transition: border-color 0.2s ease;
}

.c6:hover {
  border-color: #3b82f6;
}

.c7 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  color: #ffffff;
  margin: 0 0 0.75rem;
}

.c9 {
  margin-bottom: 1.5rem;
  flex: 1;
}

.c11 {
  font-size: 0.75rem;
  padding: 0.25rem 0.625rem;
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
}

.c13 {
  font-size: 0.875rem;
  font-weight: 700;
  align-self: flex-start;
}

.c13:hover {
  text-decoration: underline;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c5 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1536px) {
  .c5 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="projects"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
        variant="regular"
      >
        Projects
      </p>
      <h2
        class="c4"
      >
        What I've built
      </h2>
      <div
        class="c5"
      >
        <article
          class="c6"
        >
          <h3
            class="c7"
          >
            Petite Revery
          </h3>
          <p
            class="c8 c9"
            variant="small"
          >
            High-end fashion ecommerce built on Next.js and Shopify Storefront API. Custom product configurator, size guides, and a fully bespoke checkout experience.
          </p>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Next.js
            </span>
            <span
              class="c11"
            >
              TypeScript
            </span>
            <span
              class="c11"
            >
              Shopify
            </span>
            <span
              class="c11"
            >
              styled-components
            </span>
          </div>
          <a
            aria-label="View project: Petite Revery"
            class="c12 c13"
            href="https://petiterevery.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c6"
        >
          <h3
            class="c7"
          >
            7mesh Industries
          </h3>
          <p
            class="c8 c9"
            variant="small"
          >
            Performance cycling apparel brand. Headless Shopify storefront with custom collection filtering, Algolia search, and Storybook component library.
          </p>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Next.js
            </span>
            <span
              class="c11"
            >
              TypeScript
            </span>
            <span
              class="c11"
            >
              Shopify
            </span>
            <span
              class="c11"
            >
              Algolia
            </span>
            <span
              class="c11"
            >
              Storybook
            </span>
          </div>
          <a
            aria-label="View project: 7mesh Industries"
            class="c12 c13"
            href="https://7mesh.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c6"
        >
          <h3
            class="c7"
          >
            Nest Designs
          </h3>
          <p
            class="c8 c9"
            variant="small"
          >
            Baby and kids lifestyle brand. Shopify Plus storefront with subscription products, loyalty integration, and multi-currency support.
          </p>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              Next.js
            </span>
            <span
              class="c11"
            >
              TypeScript
            </span>
            <span
              class="c11"
            >
              Shopify Plus
            </span>
            <span
              class="c11"
            >
              Klaviyo
            </span>
          </div>
          <a
            aria-label="View project: Nest Designs"
            class="c12 c13"
            href="https://nestdesigns.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c6"
        >
          <h3
            class="c7"
          >
            Videoland
          </h3>
          <p
            class="c8 c9"
            variant="small"
          >
            Dutch video streaming platform. Led frontend architecture for the React rewrite from a legacy codebase, delivering live sports, series, and films.
          </p>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              React
            </span>
            <span
              class="c11"
            >
              TypeScript
            </span>
            <span
              class="c11"
            >
              Redux
            </span>
            <span
              class="c11"
            >
              Jest
            </span>
          </div>
        </article>
        <article
          class="c6"
        >
          <h3
            class="c7"
          >
            Arfer
          </h3>
          <p
            class="c8 c9"
            variant="small"
          >
            B2B furniture configurator for architects and interior designers. Real-time 3D preview with a custom quote engine built on React and Three.js.
          </p>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              React
            </span>
            <span
              class="c11"
            >
              Three.js
            </span>
            <span
              class="c11"
            >
              TypeScript
            </span>
          </div>
        </article>
        <article
          class="c6"
        >
          <h3
            class="c7"
          >
            Sprintt Ceramica
          </h3>
          <p
            class="c8 c9"
            variant="small"
          >
            Ecommerce and product catalogue for an Italian ceramic tile manufacturer. Custom CMS integration and multi-language support.
          </p>
          <div
            class="c10"
          >
            <span
              class="c11"
            >
              React
            </span>
            <span
              class="c11"
            >
              Contentful
            </span>
            <span
              class="c11"
            >
              i18n
            </span>
          </div>
        </article>
      </div>
    </section>
  </section>
</div>
`;
